--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,9 @@ tatsu ~= 5.8.3
 
 z3-solver ~= 4.11.2.0
 
-pysmt ~= 0.9.5
+# run pymst-install --msat in terminal also
+pysmt ~=0.9.5
+
+joblib ~= 1.3.2
+
+docker
