--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ parsec ~= 3.13
 ply ~= 3.11
 
 # syMTri/strix/server_adapter.py: 4
-requests ~= 2.28.0
+requests==2.31.0
 
 # syMTri/prop_lang/formula.py: 1
 rply ~= 0.7.8
@@ -26,7 +26,7 @@ tatsu ~= 5.8.3
 z3-solver ~= 4.11.2.0
 
 # run pymst-install --msat in terminal also
-pysmt ~=0.9.5
+pysmt
 
 joblib ~= 1.3.2
 
